# outcome-switching

./: .env.example  .gitignore  README.md  analysis.py  evaluate.py  preprocess.py  pyproject.toml
prompts/: final_answer_prompt.txt  system_prompt.txt  user_template.txt
