[project]
name = "outcome-switching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "inspect-ai>=0.3.84",
    "openai>=1.78.1",
    "polars>=1.29.0",
    "requests>=2.32.3",
    "rich>=13.3.3",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
